# CPSTT

./: Cargo.toml  LICENSE  README.md  settings.toml
.github/: CONTRIBUTING.md
cpstt/: Cargo.toml  README.md
cpstt/src/: main.rs
cpstt/test/: generator.cpp
images/: logo.pptx  logo.txt
src/: fileio.rs  main.rs  print_console.rs  print_error.rs
test/: generator.cpp  generator_compile_err.cpp  generator_err.cpp  generator_exec_err.cpp  settings.toml  smart.cpp  stupid.cpp
