[package]
name = "cpstt"
version = "1.1.0"
authors = ["xryuseix"]
edition = "2018"
license = "MIT"
description = "Competitive Programming Stress Test Tools"
repository = "https://github.com/xryuseix/CPSTT"
readme = "README.md"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.40"
clap = "=3.0.0-beta.2"
lazy_static = "1.4.0"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
toml = "0.5.8"
